--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
           <div class="card">
             <div class="titulo-plano">
-              <h2 class="font-1-l bold cor-1">Plano Mensal</h2>
+              <h2 class="font-1-l bold cor-1">Opção 01</h2>
               <span class="dif">Mais Vendido</span>
             </div>
 
@@ -49,16 +49,17 @@
 
           <div class="card">
             <div class="titulo-plano">
-              <h2 class="font-1-l bold cor-1">Plano com Entrada e Parcelas</h2>
+              <h2 class="font-1-l bold cor-1">Opção 02</h2>
             </div>
 
             <div class="valor-plano">
               <span class="preco font-1-l cor-1 bold">R$ 1.600,00</span>
               <span class="font-1-x cor-1 ">/ 1&ordm pagamento</span>
-              <div>
+              <div class="preco-dois">
                 <span class="preco font-1-l cor-1 bold">R$ 168,00</span>
                 <span class="font-1-x cor-1 ">/ mensais</span>
               </div>
+              <span class="dif">Melhor custo benefício a partir do 2&ordm ano</span>
             </div>
             <!-- Link para o plano com entradas -->
             <a href="" class="font-1-m cor-1 selecionar">Selecionar</a>
