--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <div class="card">
             <div class="titulo-plano">
               <h2 class="font-1-l bold cor-1">Opção 01</h2>
-              <span class="dif">Mais Vendido</span>
+              <span class="dif font-1-xs">Mais Vendido</span>
             </div>
 
             <div class="valor-plano">
@@ -59,7 +59,7 @@
                 <span class="preco font-1-l cor-1 bold">R$ 168,00</span>
                 <span class="font-1-x cor-1 ">/ mensais</span>
               </div>
-              <span class="dif">Melhor custo benefício a partir do 2&ordm ano</span>
+              <span class="dif font-1-xs">Melhor custo benefício a partir do 2&ordm ano</span>
             </div>
             <!-- Link para o plano com entradas -->
             <a href="" class="font-1-m cor-1 selecionar">Selecionar</a>
