--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="./img/favicon.svg" type="image/x-icon">
   <link rel="stylesheet" href="./css/style.css">
-  <title>Dinastia - Escolha seu Plano</title>
+  <title>Dinastia - Forma de pagamento</title>
 </head>
 
 <body>
