planos e informacao cadastro

--- a/index.html
+++ b/index.html
@@ -19,13 +19,18 @@
   </header>
   <main class="bg-main">
     <div class="container main">
+
+      <!-- Conteúdo com informações de cadastro -->
       <div class="plataforma">
         <div class="conteudo-plataforma">
-          <p class="font-1-m cor-1">Você está se cadastrando na rede de:</p>
-          <span class="font-1-s cor-1" id="rede">Texto com informação da rede</span>
+          <p class="font-1-m cor-1">Você está se cadastrando através de:</p>
+          <span class="font-1-s cor-1" id="redeNome">Nome:</span>
+          <span class="font-1-s cor-1" id="redeTelefone">Telefone:</span>
+          <span class="font-1-s cor-1" id="redeEmail">Email:</span>
         </div>
       </div>
 
+      <!-- Planos de pagamento -->
       <div class="planos">
         <h1 class="font-1-xl cor-1">Plano Dinastia Plus</h1>
         <p class="font-1-l cor-1">Escolha uma das opções de pagamento</p>
@@ -36,12 +41,14 @@
           <div class="card">
             <div class="titulo-plano">
               <h2 class="font-1-l bold cor-0">Opção 01</h2>
-              <span class="dif font-1-xs">Mais Vendido</span>
             </div>
 
             <div class="valor-plano">
-              <span class="preco font-1-l cor-0 bold">R$ 288,00</span>
-              <span class="font-1-x cor-0 ">/ mensais</span>
+              <div class="preco-planos">
+                <span class="preco font-1-xl cor-0 bold">R$ 288,00</span>
+                <span class="font-2-xs cor-0 ">/ mensais</span>
+              </div>
+              <span class="dif font-1-xs">Mais Vendido</span>
             </div>
             <!-- Link para o plano mensal -->
             <a href="" class="font-1-m cor-0 selecionar">Selecionar</a>
@@ -54,11 +61,11 @@
             </div>
 
             <div class="valor-plano">
-              <span class="preco font-1-l cor-0 bold">R$ 1.600,00</span>
-              <span class="font-1-x cor-0 ">/ 1&ordm pagamento</span>
-              <div class="preco-dois">
-                <span class="preco font-1-l cor-0 bold">R$ 168,00</span>
-                <span class="font-1-x cor-0 ">/ mensais</span>
+              <span class="preco font-1-xl cor-0 bold">R$ 1.600,00</span>
+              <span class="font-2-xs cor-0 ">/ 1&ordm mensalidade</span>
+              <div class="preco-planos">
+                <span class="preco font-1-xl cor-0 bold">R$ 168,00</span>
+                <span class="font-2-xs cor-0 ">/ mensais</span>
               </div>
               <span class="dif font-1-xs">Melhor custo benefício a partir do 2&ordm ano</span>
             </div>
@@ -66,17 +73,8 @@
             <a href="" class="font-1-m cor-0 selecionar">Selecionar</a>
 
           </div>
-
-
-
-
         </div>
-
-
       </div>
-
-
-
     </div>
   </main>
 
@@ -122,10 +120,6 @@
         </address>
       </div>
 
-      <iframe class="mapa-contato" title="Localização da Dinastia"
-        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3603.1893013515255!2d-49.2630743!3d-25.431934000000002!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94dce441e8d63a8b%3A0xe3f5af4e80044756!2sR.%20Tibagi%2C%20576%20-%2012%C2%BA%20Andar%20-%20Centro%2C%20Curitiba%20-%20PR%2C%2080060-110!5e0!3m2!1spt-BR!2sbr!4v1683838498641!5m2!1spt-BR!2sbr"
-        width="600" style="border:0;" allowfullscreen="" loading="lazy"
-        referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
   </section>
 
