--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <!-- Conteúdo com informações de cadastro -->
       <div class="plataforma">
         <div class="conteudo-plataforma">
-          <p class="font-1-m cor-1">Você está se cadastrando através de:</p>
+          <p class="font-1-m cor-1">Você está se associando através de:</p>
           <span class="font-1-s cor-1" id="redeNome">Nome:</span>
           <span class="font-1-s cor-1" id="redeTelefone">Telefone:</span>
           <span class="font-1-s cor-1" id="redeEmail">Email:</span>
