--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <div class="valor-plano">
               <span class="preco font-1-xl cor-0 bold">R$ 1.600,00</span>
-              <span class="font-2-xs cor-0 ">/ 1&ordm mensalidade</span>
+              <span class="font-2-xs cor-0 ">/ 1ª mensalidade</span>
               <div class="preco-planos">
                 <span class="preco font-1-xl cor-0 bold">R$ 168,00</span>
                 <span class="font-2-xs cor-0 ">/ mensais</span>
