--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <span class="preco font-1-xl cor-0 bold">R$ 168,00</span>
                 <span class="font-2-xs cor-0 ">/ mensais</span>
               </div>
-              <span class="dif font-1-xs">Melhor custo benefício a partir do 2&ordm ano</span>
+              <span class="dif font-1-xs">Melhor custo-benefício a partir do 2&ordm ano</span>
             </div>
             <!-- Link para o plano com entradas -->
             <a href="" class="font-1-m cor-0 selecionar">Selecionar</a>
